--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header .lista ul {
     list-style-type: none;
     display: inline-flex;
     gap: 15px;
-    font-size: 20px;
+    font-size: 1.25vw;
     /* melhor contraste do q o branco */
     color: black;
 }
@@ -178,6 +178,11 @@ footer nav ul li {
     cursor: pointer;
 }
 
+footer nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
 footer nav ul li:hover {
     text-decoration: underline;
 }
@@ -272,11 +277,11 @@ footer nav ul li img {
 }
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5); /* Cor preta com 50% de opacidade */
     z-index: 1;
     overflow-x: hidden;
@@ -352,7 +357,7 @@ footer nav ul li img {
     flex-direction: column;
     align-items: center;
     gap: 25px;
-    width: 25%;
+    width: 27.5%;
 }
 
 .main-contato section h1 {
@@ -435,11 +440,16 @@ footer nav ul li img {
 
 /* responsividade para tablet */
 @media (max-width: 800px) {
+    header .lista ul {
+        font-size: 2vw;
+    }
+
     .div-sobre-nos h1, 
     .div-maps h1,
     .div-detalhes-empresa h1,
     .div-video h1,
-    .main-contato section h1:not(.detalhes-escrita h1) {
+    .main-contato section h1,
+    .div-produtos h1:not(.detalhes-escrita h1) {
         text-align: center;
         font-weight: 400;
         margin-top: 25px;
@@ -488,6 +498,10 @@ footer nav ul li img {
     .produto p, .produto span, .pop-up p {
         font-size: 1.5vw;
         text-align: center;
+    }
+
+    .btn-saiba-mais {
+        font-size: 1.5vw;
     }
 
     .pop-up {
@@ -542,14 +556,14 @@ footer nav ul li img {
     }
 
     header .lista ul {
-        font-size: 10px;
+        font-size: 4vw;
     }
 
     .div-sobre-nos h1, 
     .div-maps h1,
     .div-detalhes-empresa h1,
     .div-video h1,
-    .div-produtos h1
+    .div-produtos h1,
     .main-contato section h1:not(.detalhes-escrita h1) {
         font-size: 4.5vw;
     }
@@ -557,6 +571,10 @@ footer nav ul li img {
     .div-sobre-nos p, .div-detalhes-empresa section div p, .produto p, .produto span, .pop-up p {
         font-size: 3vw;
         line-height: 20px;
+    }
+
+    .btn-saiba-mais {
+        font-size: 3vw;
     }
 
     .map-responsivo {
